--- a/client/main.css
+++ b/client/main.css
@@ -12,6 +12,7 @@ body {
 -------------------------------------------------- */
 
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
+
 .navbar-wrapper {
   position: absolute;
   top: 0;
@@ -165,7 +166,7 @@ body {
 
   /* The navbar becomes detached from the top, so we round the corners */
   .navbar-wrapper .navbar {
-    border-radius: 4px;
+    border-radius: 0px;
   }
 
   /* Bump up size of carousel content */
@@ -184,4 +185,13 @@ body {
   .featurette-heading {
     margin-top: 120px;
   }
+}
+
+/* Footer Image
+-------------------------------------------------- */
+
+.footer-img {
+  min-width: 25%;
+  max-width: 200px;
+  padding-right: 20px;
 }
