Added page content for contact and about. Commenced home

--- a/client/main.css
+++ b/client/main.css
@@ -4,7 +4,9 @@
 
 body {
   padding-bottom: 40px;
-  color: #5a5a5a;
+  /*color: #5a5a5a;*/
+  color: #444;
+  font-size: 13px;
 }
 
 /* Widen the container 
@@ -14,6 +16,14 @@ body {
   .container {
       width: 90%;
   }
+}
+
+/* Home page
+-------------------------------------------------- */
+.home-page {
+  background-color: #222;
+  color: #fff;
+  height: 100%;
 }
 
 /* Page content to clear the navbar
